<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layPrincipal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/lblContenido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblContenido"
        android:textSize="20dp" />

    <CheckBox
        android:id="@+id/chkGorras"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/chkGorras"
        android:textSize="20dp" />

    <CheckBox
        android:id="@+id/chkBanyadores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/chkBanyadores"
        android:textSize="20dp" />

    <CheckBox
        android:id="@+id/chkCamisas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/chkCamisas"
        android:textSize="20dp" />

    <CheckBox
        android:id="@+id/chkBotines"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/chkBotines"
        android:textSize="20dp" />

    <CheckBox
        android:id="@+id/chkChanclas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/chkChanclas"
        android:textSize="20dp" />

    <CheckBox
        android:id="@+id/chkPantalones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/chkPantalones"
        android:textSize="20dp" />

    <LinearLayout
        android:id="@+id/layPeso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblPeso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lblPeso"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/lblPesoTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="0 kg"
            android:textSize="24dp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnBorrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/rojo"
        android:onClick="borrar"
        android:text="@string/btnBorrar"
        android:textSize="20dp" />
</LinearLayout>